src/test/deca/context/valid/homemade/test/test24_25_26_decl_field.deca
// test valide de la règle 2.4 2.5 et 2.6


class A {
    int x;
    float y = 7.5;
    boolean valid = true;
}