src/test/deca/context/invalid/homemade/tests/test25_variable_void1.deca
// test invalide de la règle 2.5

class A  {
    void val;
}